corpus/comments.txt
==================
Line comment
==================
-- foo

1

---

(expression
  (line_comment (line_comment_prefix) (line_comment_content))
  (primitive_expression (numeric_literal (natural_literal))))

==================
Block comment
==================
{- foo -}

1

---

(expression
  (block_comment
    (block_comment_open)
    (block_comment_content)
    (block_comment_close))
  (primitive_expression (numeric_literal (natural_literal))))

==================
Nested block comments
==================

{- foo {- bar -} baz -}

1

---

(expression
  (block_comment
    (block_comment_open)
    (block_comment_content)
    (block_comment_close))
  (primitive_expression (numeric_literal (natural_literal))))

==================
Mixed comments
==================

{- foo -}
-- bar
{- --baz -}

1

---

(expression
  (block_comment
    (block_comment_open)
    (block_comment_content)
    (block_comment_close))
  (line_comment (line_comment_prefix) (line_comment_content))
  (block_comment
    (block_comment_open)
    (block_comment_content)
    (block_comment_close))
  (primitive_expression (numeric_literal (natural_literal))))

==================
Unicode comment
==================

-- fꝏ

1

---

(expression
  (line_comment (line_comment_prefix) (line_comment_content))
  (primitive_expression (numeric_literal (natural_literal))))

==================
Unterminated block comment
==================

{- foo {- bar -}

1

---

(expression
  (ERROR (block_comment_open) (UNEXPECTED 'f'))
  (block_comment
    (block_comment_open)
    (block_comment_content)
    (block_comment_close))
  (primitive_expression (numeric_literal (natural_literal))))
