corpus/completion.txt
==================
Spaces around completion
==================

T :: r

---

(expression
  (completion
    (primitive_expression (identifier (label)))
    (completion_operator)
    (primitive_expression (identifier (label)))))
